syntax = "proto3";

package task;

option java_package = "com.task";
option java_outer_classname = "TaskServiceProto";

import 'proto/task/task.proto';

service TaskService {

  rpc generateSchedule(GenerateScheduleRequest) returns (GenerateScheduleResponse);
}

message GenerateScheduleRequest {
    int64 schedule_start_unix = 1;
    int64 schedule_end_unix = 2;
}

message GenerateScheduleResponse{
	repeated task.TaskEntry generated_task_entries = 1;
}